tests/algorithms/x/Elixir/financial/simple_moving_average.error
run: exit status 1
    warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 47 │       {i, result, window_sum} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/financial/simple_moving_average.exs:47:8: Main.simple_moving_average/2

    warning: variable "window_sum" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 47 │       {i, result, window_sum} = try do
    │                   ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/financial/simple_moving_average.exs:47:19: Main.simple_moving_average/2

    error: undefined variable "idx"
    │
 81 │         while_fun_2.(while_fun_2, idx)
    │                                   ^^^
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/financial/simple_moving_average.exs:81:35: Main.main/0

    warning: variable "idx" is unused (if the variable is not meant to be used, prefix it with an underscore)
    │
 80 │     idx = try do
    │     ~~~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/financial/simple_moving_average.exs:80:5: Main.main/0

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/financial/simple_moving_average.exs: cannot compile module Main (errors have been logged)

